--- a/app.css
+++ b/app.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background-color:  rgb(216, 213, 213);
+}
 p{
     font-size: 25px;
     text-align: center;
@@ -14,6 +17,7 @@ h1{
     width: 250px;
     height: 400px;
     background-color:rgb(119, 224, 193);
+    border: 2px solid rgb(120, 207, 181);
     border-radius: 15px;
     margin-top: 120px;
     margin-left:70px;
@@ -24,6 +28,7 @@ h1{
     height:400px;
     float: left;
     background-color:rgb(216, 136, 61); 
+    border: 2px solid rgb(202, 141, 83);
     border-radius: 15px;
     margin-top: 120px;
     margin-left: 70px;
@@ -35,6 +40,7 @@ h1{
     margin-top: 120px;
     margin-left: 70px;
     background-color:rgb(37, 163, 212); 
+    border: 2px solid rgb(74, 179, 221);
     border-radius: 15px;
 }
 .name{
@@ -50,14 +56,15 @@ h1{
 
 .desc{
     position: absolute;
-    width:200px;
-    height: 130px;
-    margin-left: 25px;
+    width:220px;
+    height: 150px;
+    transform: rotate(-15deg);
+    margin-left: 5px;
     margin-top: 25px;
     background-color: rgb(216, 213, 213);
     border-radius: 15px;
     text-align: center;
-    font-size: 10px;
+    font-size: 12px;
 }
 .img1{
     width: 150px;
