--- a/app.css
+++ b/app.css
@@ -6,12 +6,13 @@ body{
     background-color:  rgb(216, 213, 213);
 }
 p{
-    font-size: 25px;
     text-align: center;
+    transform: rotate(15deg);
 }
 h1{
     text-align: center;
     font-size: 10px;
+    transform: rotate(15deg);
 }
 .col1{
     width: 250px;
